--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -869,12 +869,11 @@ gitref:ead3cd3ef628[repository=src]
 Document recent file handle layout changes.
 gitref:ca22082c01a7[repository=src]
 
-Allow to pass `{NGROUPS_MAX} + 1` groups in man:mountd[8].
-`NGROUPS_MAX` is just the minimum maximum of the number of allowed supplementary groups.
-The actual runtime value may be greater.
-Allow more groups to be specified accordingly (now that, a few commits ago, man:nmount[2] has been changed similarly).
-gitref:ca9614d8f64a[repository=src]
-(Sponsored by The FreeBSD Foundation).
+Allow to specify as many groups as configured to be supported by the system in `-maproot` or `-mapall` options in  man:exports[5].
+Previously, the cap was `NGROUPS_MAX + 1`, where `NGROUPS_MAX` is just the minimum maximum of the number of allowed supplementary groups.
+Now use the proper `{NGROUPS_MAX} + 1` value, with `{NGROUPS_MAX}` being fetched at runtime via man:sysconf[3].
+gitref:e87848a8150e[repository=src]
+(Sponsored by The FreeBSD Foundation.)
 
 [[boot-loader]]
 == Boot Loader Changes
