--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -632,7 +632,8 @@ gitref:add521c1a5d2[repository=src],
 gitref:2a20ce91dc29[repository=src],
 gitref:fa4352b74580[repository=src],
 gitref:3d8d91a5b32c[repository=src],
-gitref:8f7e8726e3f5[repository=src]
+gitref:8f7e8726e3f5[repository=src],
+gitref:89958992b618[repository=src]
 (Sponsored by The FreeBSD Foundation.)
 
 man:mac_do[4] now supports changing rules within jails with the `security.mac.do.rules` man:sysctl[8] knob.
@@ -649,8 +650,7 @@ Support multiple users and groups as single rule's targets in man:mac_do[4].
 Supporting group targets is a requirement for man:mac_do[4] to be able to enforce a limited set of valid new groups in the target credentials and to allow group-only credentials transitions.
 The allowed groups are tied to one or multiple user IDs.
 Multiple users and groups in a rule's target part are treated as alternatives (inclusive disjunction), except for the clauses expressing the mandatory presence or absence of a supplementary group.
-The rules syntax has been changed incompatibly.
-Migrating existing rules is just a matter of adding `uid=` in front of the target part, substituting commas (`,`) with semi-colons (`;`) and colons (`:`) with greater-than signs (`>`).
+The rules syntax has been changed incompatibly, but migrating existing rules is just a matter of adding `uid=` in front of the target part, substituting commas (`,`) with semi-colons (`;`) and colons (`:`) with greater-than signs (`>`).
 Please consult the man:mac_do[4] manual page for more information.
 gitref:83ffc412b2e9[repository=src],
 gitref:8f7e8726e3f5[repository=src],
