--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -534,7 +534,10 @@ One notable change is that GoogleTest 1.15.x now officially requires C++-14 (1.1
 The man:setusercontext[3] routine in `libutil` will now set the process priority (nice) from the [.filename]#.login.conf# file from the home directory under appropriate conditions, as well as the system man:login.conf[5].
 The priority can now have the value `inherit`, indicating that the priority should be unchanged from that of the parent process.
 Similarly, the umask can have the value `inherit`.
-gitref:6f6186e19fe5[repository=src], gitref:a8c273b3c97f[repository=src], gitref:d2d66fedc418[repository=src] (Sponsored by Kumacom SAS)
+gitref:c328e6c6ccaa[repository=src],
+gitref:d162d7e2ad32[repository=src],
+gitref:f2a0277d3e51[repository=src]
+(Sponsored by Kumacom SAS)
 
 Many string and memory operations in the C library now use SIMD (single instruction multiple data) extensions for improved performance when available on amd64 systems; see man:simd[7].
 (Sponsored by The FreeBSD Foundation)
