--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -613,6 +613,11 @@ This section covers changes to kernel configurations, system tuning, and system 
 [[kernel-general]]
 === General Kernel Changes
 
+FreeBSD now natively implements the Linux man:inotify[2] interface.
+The system calls themselves are not API-compatible, but libc provides an API-compatible interface, so software which relies on inotify can be run unmodified.
+gitref:f1f230439fa4[repository=src],
+(Sponsored by Klara, Inc.)
+
 The `fpu_kern_enter` and `fpu_kern_leave` routines have been implemented for powerpc, allowing the use of man:ossl[4] crypto functions in the kernel that use floating point and vector registers.
 gitref:91e53779b4fc[repository=src]
 
@@ -1036,6 +1041,9 @@ Users upgrading EC2 instances from earlier FreeBSD releases should set `hw.pci.i
 The `AT_NO_AUTOMOUNT` flag is now ignored for all Linuxulator stat() variants (as the behavior specified by the flag already matches FreeBSD's), improving Linux application compatibility.
 gitref:99d3ce80ba07[repository=src]
 (Sponsored by The FreeBSD Foundation)
+
+The Linux man:inotify[2] system calls are now implemented in the Linuxulator.
+(Sponsored by Klara, Inc.)
 
 [[multimedia]]
 == Multimedia
