--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -587,6 +587,21 @@ gitref:e77813f7e4a3[repository=src]
 The accuracy of man:asinf[3] and man:acosf[3] has improved.
 gitref:33c82f11c267[repository=src]
 
+The man:setgroups[2] and man:getgroups[2] system calls and the man:initgroups[3] library function have been changed to avoid setting or reporting the effective group ID, now only concerning themselves with the supplementary groups.
+The main purpose of this change is to avoid security issues going forward by becoming compatible with Linux/glibc, OpenBSD, NetBSD and illumos-based systems.
+Consequently, almost all portable applications should already be compliant with this new behavior and will continue to work correctly or even get fixed in the process (see, e.g., gitref:239e8c98636a[repository=src] for an example affecting OpenSSH).
+However, out of caution, porters, system administrators and users are advised to audit their applications using man:setgroups[2], man:getgroups[2] and man:initgroups[3], watching out for the following points.
+Applications must be using man:setgid[2] or man:setegid[2] in addition to man:setgroups[2] or man:initgroups[3] to set the effective group ID.
+They must not treat the first element of the array returned by man:getgroups[2] specially, but instead as any other supplementary group.
+For more information, please consult the SECURITY CONSIDERATIONS sections that have been added to the man:setgroups[2], man:getgroups[2] and man:initgroups[3] manual pages.
+Compatibility system calls and library functions have been provided so that binaries and libraries compiled on FreeBSD 14 systems or earlier will continue to work exactly as before.
+gitref:9da2fe96ff2e[repository=src],
+gitref:8878569103a3[repository=src],
+gitref:7132fb5edbc9[repository=src],
+gitref:2932e6f59bff[repository=src],
+gitref:8878569103a3[repository=src]
+(Sponsored by The FreeBSD Foundation.)
+
 [[userland-deprecated-programs]]
 === Deprecated Applications
 
