--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -965,7 +965,7 @@ This section describes changes that affect networking in FreeBSD.
 
 Lots of improvements to the network stack, including performance improvements and bug fixes for the man:sctp[4] stack.
 
-Descriptors returned by man:sctp_peeloff[2] now inherit capabilities from the parent socket.
+Descriptors returned by man:sctp_peeloff[2] now inherit Capsicum capability man:rights[4] from the parent socket.
 gitref:ae3d7e27abc9[repository=src]
 (Sponsored by The FreeBSD Foundation)
 
