--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -602,6 +602,12 @@ gitref:2932e6f59bff[repository=src],
 gitref:8878569103a3[repository=src]
 (Sponsored by The FreeBSD Foundation.)
 
+`libc` contains compatibility functions enabling running executables/libraries compiled for older versions of FreeBSD.
+Those that are themselves using compatibility system calls would not reference them correctly, causing misbehavior at runtime.
+This has been fixed.
+gitref:47f5f89dbd27[repository=src]
+(Sponsored by The FreeBSD Foundation.)
+
 [[userland-deprecated-programs]]
 === Deprecated Applications
 
