--- a/website/content/en/releases/15.0R/installation.adoc
+++ b/website/content/en/releases/15.0R/installation.adoc
@@ -40,10 +40,7 @@ For Git use the releng/{localRel} branch which will be where any upcoming Securi
 [[upgrade-binary]]
 == Upgrading Using "FreeBSD Update"
 
-NOTE: FreeBSD Update is probably not going to exist in {releaseCurrent}!
-The text below is boilerplate from previous releases and should be replaced with instructions for using pkgbase once those are finalized.
-
-The man:freebsd-update[8] utility supports binary upgrades of amd64, arm64, and i386 systems running earlier FreeBSD releases.
+The man:freebsd-update[8] utility supports binary upgrades of amd64 and arm64 systems running earlier FreeBSD releases.
 Systems running {releasePrev} can upgrade as follows:
 
 [.screen]
@@ -51,6 +48,11 @@ Systems running {releasePrev} can upgrade as follows:
 # freebsd-update fetch
 # freebsd-update install
 ----
+
+[IMPORTANT]
+====
+This step is essential, as upgrading to {releaseCurrent} without applying the FreeBSD-EN-25:18.freebsd-update errata update will result in an inoperative system!
+====
 
 Now the man:freebsd-update[8] utility can fetch bits belonging to {releaseCurrent}.
 During this process man:freebsd-update[8] will ask for help in merging configuration files.
