--- a/website/content/en/releases/15.0R/readme.adoc
+++ b/website/content/en/releases/15.0R/readme.adoc
@@ -35,7 +35,7 @@ This distribution is a {releaseType} of FreeBSD {releaseCurrent}, the latest poi
 [[about]]
 == About FreeBSD
 
-FreeBSD is an open source operating system derived from 4.4 BSD Lite2 for 64-bit x86-based PC hardware (amd64), 32-bit x86-based PC hardware (i386), 64-bit Arm(R) ARMv8-A AArch64 systems (aarch64), 32-bit Arm(R) ARMv6/7 systems (armv6/7), PowerPC(R) systems (powerpc, powerpc64), and RISC-V (riscv64) systems.
+FreeBSD is an open source operating system derived from 4.4 BSD Lite2 for 64-bit x86-based PC hardware (amd64), 64-bit Arm(R) ARMv8-A AArch64 systems (aarch64), 32-bit Arm(R) ARMv7 systems (armv7), 64-bit PowerPC(R) systems (powerpc64, powerpc64le), and 64-bit RISC-V (riscv64) systems.
 
 FreeBSD works with a wide variety of peripherals and configurations and can be used for everything from software development to games to Internet Service Provision.
 
