--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -199,6 +199,18 @@ This section lists the various Security Advisories and Errata Notices since {rel
 |https://www.freebsd.org/security/advisories/FreeBSD-SA-25:07.libarchive.asc[FreeBSD-SA-25:07.libarchive]
 |08 August 2025
 |Integer overflow in libarchive leading to double free
+
+|https://www.freebsd.org/security/advisories/FreeBSD-SA-25:08.openssl.asc[FreeBSD-SA-25:08.openssl]
+|30 September 2025
+|Multiple vulnerabilities in OpenSSL
+
+|https://www.freebsd.org/security/advisories/FreeBSD-SA-25:09.netinet.asc[FreeBSD-SA-25:09.netinet]
+|22 October 2025
+|`SO_REUSEPORT_LB` breaks man:connect[2] for UDP sockets
+
+|https://www.freebsd.org/security/advisories/FreeBSD-SA-25:10.unbound.asc[FreeBSD-SA-25:10.unbound]
+|26 November 2025
+|Cache poison in local-unbound service
 |===
 
 [[errata]]
@@ -353,7 +365,7 @@ This section lists the various Security Advisories and Errata Notices since {rel
 
 |https://www.freebsd.org/security/advisories/FreeBSD-EN-25:11.ena.asc[FreeBSD-EN-25:11:ena]
 |02 July 2025
-|ena resets and kernel panic on Nitro v4 or newer instances
+|`ena` resets and kernel panic on Nitro v4 or newer instances
 
 |https://www.freebsd.org/security/advisories/FreeBSD-EN-25:12.efi.asc[FreeBSD-EN-25:12:efi]
 |08 August 2025
@@ -366,6 +378,22 @@ This section lists the various Security Advisories and Errata Notices since {rel
 |https://www.freebsd.org/security/advisories/FreeBSD-EN-25:14.route.asc[FreeBSD-EN-25:14:route]
 |08 August 2025
 |man:route[8] monitor buffers too much when redirected to a file
+
+|https://www.freebsd.org/security/advisories/FreeBSD-EN-25:15.arm64.asc[FreeBSD-EN-25:15:arm64]
+|16 September 2025
+|arm64 man:syscall[2] allows unprivileged user to panic kernel
+
+|https://www.freebsd.org/security/advisories/FreeBSD-EN-25:16.vfs.asc[FreeBSD-EN-25:16:vfs]
+|16 September 2025
+|man:copy_file_range[2] fails to set output parameters
+
+|https://www.freebsd.org/security/advisories/FreeBSD-EN-25:17.bnxt.asc[FreeBSD-EN-25:17:bnxt]
+|16 September 2025
+|man:bnxt[4] fails to set media type in some cases
+
+|https://www.freebsd.org/security/advisories/FreeBSD-EN-25:18.freebsd-update.asc[FreeBSD-EN-25:18:freebsd-update]
+|30 September 2025
+|man:freebsd-update[8] installs libraries in incorrect order
 |===
 
 [[userland]]
